# mpeg-ts-parser

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
headers/: PES_Assembler.h  PES_PacketHeader.h  TS_AdaptationField.h  TS_Common.h  TS_Handler.h  TS_PacketHeader.h  TS_TransportStream.h  tsAdaptationField.h  tsCommon.h  tsPacketHeader.h  tsTransportStream.h
outputs/: check_differences.bat
sources/: PES_Assembler.cpp  PES_PacketHeader.cpp  TS_AdaptationField.cpp  TS_Handler.cpp  TS_PacketHeader.cpp  TS_TransportStream.cpp  tsAdaptationField.cpp  tsPacketHeader.cpp  tsTransportStream.cpp
